@@ -334,9 +334,9 @@ Backtrace:
   #{$!.backtrace.join("\n  ")}
 ---------------------------------------------------
 See:
- * http://rubydoc.info/gems/ruby-oci8/file/docs/install-full-client.md for Oracle full client
- * http://rubydoc.info/gems/ruby-oci8/file/docs/install-instant-client.md for Oracle instant client
- * http://ruby-oci8.rubyforge.org/en/file.report-installation-issue.html to report an issue.
+ * http://www.rubydoc.info/gems/ruby-oci8/file/docs/install-full-client.md for Oracle full client
+ * http://www.rubydoc.info/gems/ruby-oci8/file/docs/install-instant-client.md for Oracle instant client
+ * http://www.rubydoc.info/gems/ruby-oci8/file/docs/report-installation-issue.md to report an issue.
 
 EOS
       exc = RuntimeError.new
