@@ -31,7 +31,6 @@ spec = Gem::Specification.new do |s|
   s.summary = 'Ruby interface for Oracle using OCI8 API'
   s.email = 'kubo@jiubao.org'
   s.homepage = 'https://github.com/kubo/ruby-oci8/'
-  s.rubyforge_project = 'ruby-oci8'
   s.description = <<EOS
 ruby-oci8 is a ruby interface for Oracle using OCI8 API. It is available with Oracle8i, Oracle9i, Oracle10g, Oracle11g and Oracle Instant Client.
 EOS
