@@ -250,7 +250,7 @@ Fixed Issues
 ------------
 
 -   delete code which overwrites signal handlers registered by ruby.
-    See: [rubyforge thread 50690](http://rubyforge.org/forum/forum.php?thread_id=50690&forum_id=1078)
+    See: [rubyforge thread 50690](https://web.archive.org/web/20140521194940/https://rubyforge.org/forum/forum.php?thread_id=50690&forum_id=1078)
 
 -   fix internal heap error in OCI.
     See: [github issue #12](https://github.com/kubo/ruby-oci8/issues/12)
@@ -463,7 +463,7 @@ You need to set "`OCI8.properties[:bind_string_as_nchar] = true`"
 if the database character set is not UTF-8 and 'NCHAR'/'NVARCHAR2' columns
 contain characters which cannot be converted to the database character set.
 
-See: {http://rubyforge.org/forum/forum.php?thread\_id=48838&forum\_id=1078}
+See: [rubyforge thread 48838](https://web.archive.org/web/20140519033641/http://rubyforge.org/forum/forum.php?thread_id=48838&forum_id=1078)
 
 Fixed issues
 ------------
@@ -472,13 +472,13 @@ Fixed issues
 
     (reported by Jordan Curzon and Aaron Qian)
 
-    See: {http://rubyforge.org/forum/forum.php?thread\_id=49751&forum\_id=1078}
+    See: [rubyforge thread 49751](https://web.archive.org/web/20140519033653/http://rubyforge.org/forum/forum.php?thread_id=49751&forum_id=1078)
 
 -   Raise "OCIError: ORA-01805: possible error in date/time operation"
     when Oracle 11gR2's client and server timezone versions are not same
     instead of raising a exception "undefined method `*' for nil:NilClass."
 
-    See: {http://rubyforge.org/forum/forum.php?thread\_id=49102&forum\_id=1078}
+    See: [rubyforge thread 49102](https://web.archive.org/web/20140521194951/https://rubyforge.org/forum/forum.php?thread_id=49102&forum_id=1078)
 
 -   Fix unexpectedly disconnect when failed-logon connections is GC'ed
     and the connection object's address is accidentally same with
@@ -756,7 +756,7 @@ Fixed installation issues
 
 *   fix an error when executing "select NULL from dual".
 
-    {http://rubyforge.org/forum/forum.php?thread\_id=32468&forum\_id=1078}
+    [rubyforge thread 32468](https://web.archive.org/web/20140521152939/http://rubyforge.org/forum/forum.php?thread_id=32468&forum_id=1078)
     (contributed by Raimonds Simanovskis)
 
 *   [ruby 1.9] fix OCI8::BLOB to read/write binary. Prior to 2.0.1,
