@@ -1,4 +1,8 @@
 2015-09-13  Kubo Takehiro  <kubo@jiubao.org>
+	* NEWS, docs/report-installation-issue.md, ext/oci8/oraconf.rb,
+	  lib/oci8/properties.rb, ruby-oci8.gemspec: Fix links to rubyforge.
+
+2015-09-13  Kubo Takehiro  <kubo@jiubao.org>
 	* ruby-oci8.gemspec: Use Kernel.load instead of load not to use Gem::Specification.load.
 
 2015-09-13  Kubo Takehiro  <kubo@jiubao.org>
